<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/pm20"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivSearching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_illustration_search"
            android:contentDescription="@string/image_illustrator" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsextrabold"
                        android:text="@string/title_sliding"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/sliding_description"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvNumberSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:textColor="@color/oren"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:text="@string/str_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center"
                        android:text="@string/passenger"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/pm30"
                        android:layout_marginStart="@dimen/pm30"
                        android:layout_marginBottom="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/str_1" />

                        <com.google.android.material.slider.Slider
                            android:id="@+id/sliderPassenger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:valueFrom="0"
                            android:stepSize="1"
                            android:valueTo="10"
                            app:thumbColor="@color/oren"
                            app:trackColor="@color/yellow"/>

                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/str_10" />
                    </LinearLayout>

                </LinearLayout>

                </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsextrabold"
                    android:text="@string/cancel"
                    android:textColor="@color/oren"
                    android:textSize="@dimen/s12"
                    android:textStyle="bold"
                    app:backgroundTint="@color/gray_e5"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btnSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/s12"
                    android:textColor="@color/white"
                    android:text="@string/select"
                    android:fontFamily="@font/poppinsextrabold"
                    android:backgroundTint="@color/oren"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>


</RelativeLayout>